--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/course_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SinhVienActivity"></activity>
+        <activity android:name=".ThongTinSVActivity"></activity>
+        <activity android:name=".SinhVienActivity" />
         <activity android:name=".LopActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
